@@ -94,8 +94,6 @@
 	
 @
 
-\section*{Appendix}
-
 % add table of contents in 'Index'
 %\cleardoublepage
 %\phantomsection
@@ -104,7 +102,7 @@
 <<indexCustom-printIndex>>=
 
 	if(!is.null(inputParameters$index$indexPrint)) {
-		cat("\\subsection{Index}\n")
+		cat("\\section{Index}\n")
 		cat(inputParameters$index$indexPrint)
 	}
 
@@ -112,9 +110,13 @@
 
 \printindex
 
+\newpage
+
+\section{Appendix}
+
 \subsection{Session information}
 
-This report was \Sexpr{ifelse(shiny, "automatically generated by a Shiny application", "generated")}
+This report was \Sexpr{ifelse(inputParameters$shiny, "automatically generated by a Shiny application", "generated")}
 the: \Sexpr{format(Sys.time(), format = "%Y-%m-%d at %H:%M:%S")}.
 
 <<sessionInfo>>=
